# cogworks

./: README.md  pyproject.toml
.github/workflows/: workflow.yml
cogworks/: __init__.py
